# temper

./: .gitignore  README.md  common.h  createproject.sh  event.c  event.h  main.c  main.h  makelinux.sh  makerg350.sh  makewin32.sh  menu.c  old_project.tgz  platform_defines.h  screen.c  screen.h  video.c  workspace.linux.code-workspace
CMake/: CMakeLists_Appsample.txt  CMakeLists_libsample.txt  LinuxSetup.cmake  SsLibCommonSetup.cmake  mips32-linux-gcc.cmake
SDL/: Makefile.rg350  SDL_event.c  SDL_main.c  SDL_screen.c  pack.sh
config/: temper.cf2
doc/: audio.md  input.md
old_project/: event.c
old_project/SDL/: Makefile  SDL_main.c  makerg350.sh  pack.sh
old_project/SDL/opk/: default.gcw0.desktop
project/: .project  CMakeLists.txt
project/CMake/: ConfigCompileType.cmake  LinuxSetup.cmake  MingWSetup.cmake  ToolChain-MacOSX-GCC.cmake  ToolChain-psp.cmake  Win32Setup.cmake  mips32-linux-gcc.cmake
project/cmake/: ConfigCompileType.cmake  LinuxSetup.cmake  MingWSetup.cmake  ToolChain-i586-mingw32.cmake
project/pcengine/srcs/: arcade_card.h  bin_cue.c  cd.c  event.c  main.c  menu.c  menu.h  platform_defines.h  screen.c
project/temper/: CMakeLists.txt
project/temper/srcs/: adpcm.c  adpcm.h  audio.c  audio.h  bin_cue.h  cd.c  cd.h  common.h  common_defines.h  common_deftypes.h  cpu.c  cpu.h  cpu_common.h  debug.c  debug.h  disasm.c  event.c  event.h  io.h  main.c  main.h  memory.c  menu.c  menu.h  platform_defines.h  psg.c  screen.c  screen.h  setup.h  video.c
project/temper/srcs/SDL/: SDL_audio.c  SDL_event.c  SDL_event.h  SDL_main.c  SDL_screen.c  SDL_screen.h
project/temper/srcs/linux/: CMakeLists.txt  SDL_event.c  SDL_event.h  SDL_main.c  SDL_screen.h  crc32.c  setup.c
project/temper/srcs/mingw/: CMakeLists.txt  SDL_event.c  SDL_event.h  SDL_main.c  SDL_menu.c  setup.c
project/temper/srcs/mingw32/: CMakeLists.txt
project/temper/srcs/rg350/: CMakeLists.txt  SDL_event.c  SDL_menu.c  setup.c
win32/: Makefile
